--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ swissImage
 swissBUILDINGS3D/*/models/*.png
 swissBUILDINGS3D/*/models/*.blend
 swissBUILDINGS3D/*/models/*.egg
+!swissBUILDINGS3D/*/models/*_texture.png
